--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 argon2 = "0.5.3"
 axum = "0.8.1"
 axum-extra = { version = "0.10.0", features = ["cookie"] }
+axum-macros = "0.5.0"
 base64 = "0.22.1"
 chrono = { version = "0.4.39", features = ["serde"] }
 dotenv = "0.15.0"
