--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,5 +25,7 @@ tokio = { version = "1.43.0", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["cors", "trace"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
+utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "decimal_float", "uuid"] }
+utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
 uuid = { version = "1.13.1", features = ["serde", "v4"] }
 validator = { version = "0.20.0", features = ["derive"] }
