--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
-services:
+name: rust-books
 
+services:
   redis:
     image: redis:alpine
     container_name: redis-books-rust
@@ -7,5 +8,15 @@ services:
       - '6379:6379'
     volumes:
       - redisDB:/data
+  postgres:
+    image: postgres:16-alpine
+    container_name: postgres-books-rust
+    env_file:
+      - ./.env
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./postgres/data:/var/lib/postgresql/data
 volumes:
   redisDB:
+  postgres:
